# Note4Keep-backend

./: Cargo.toml  Session.vim  note4keep_back.code-workspace  ç
src/: main.rs  utils.rs
src/auth/: bcrypt.rs  jwt.rs
src/db/: connect.rs  models.rs
src/handlers/: notes.rs  users.rs
src/tests/: create-note.http  create-user.http  login.http  notes.http  users.http
src/utils/: check_integrity.rs  get_token.rs  mongo_health.rs  random_id.rs
