[package]
name = "note4keep-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
hyper = { version = "1.1.0", features = ["full"] }
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
serde_json = "1.0"
dotenv = "0.15.0"
futures = "0.3"
mongodb = "2.8.0"
serde = "1.0.193"
axum-macros = "0.4.0"
once_cell = "1.19.0"
async-once-cell = "0.5.3"
bcrypt = "0.15.0"
chrono = "0.4.31"
jsonwebtoken = "9.2.0"
rand = "0.8.5"
regex = "1.10.2"
log = "0.4.20"
